--- a/src/app/modules/list/list.component.html
+++ b/src/app/modules/list/list.component.html
@@ -10,13 +10,13 @@
 <div class="text-center">
   <ul class="pagination">
     <li class="page-item">
-      <a class="page-link" href="#">&laquo;</a>
+      <a class="page-link" href="javascript:///" (click)="loadPage(this.page - 1)" *ngIf="this.page != 0">&laquo;</a>
     </li>
     <li class="page-item" *ngFor="let n of storage.pages; index as i">
       <a class="page-link" (click)="loadPage(i)" href="javascript:///">{{i + 1}}</a>
     </li>
     <li class="page-item">
-      <a class="page-link" href="#">&raquo;</a>
+      <a class="page-link" href="javascript:///" (click)="loadPage(this.page + 1)" *ngIf="this.page != this.storage.pages.length">&raquo;</a>
     </li>
   </ul>
 </div>
