--- a/src/app/modules/list/list.component.html
+++ b/src/app/modules/list/list.component.html
@@ -12,8 +12,9 @@
     <li class="page-item">
       <a class="page-link" href="javascript:///" (click)="loadPage(this.page - 1)" *ngIf="this.page != 0">&laquo;</a>
     </li>
-    <li class="page-item" *ngFor="let n of storage.pages; index as i">
-      <a class="page-link" (click)="loadPage(i)" href="javascript:///">{{i + 1}}</a>
+    <li class="page-item" *ngFor="let n of storage.pages; index as i" [class.active]="i === this.page">
+      <a class="page-link" *ngIf="(storage.pages.length > 5 && (i <= storage.pages.length / 6) || (i >= (storage.pages.length / 6) * 5)) || (storage.pages.length <= 10) || this.page == i" (click)="loadPage(i)" href="javascript:///">{{i === 0 ? 'H' : i}}</a>
+      <a class="page-link ellipses" *ngIf="storage.pages.length > 5 && (i === 6 && this.page !== 6)" href="javascript:///">...</a>
     </li>
     <li class="page-item">
       <a class="page-link" href="javascript:///" (click)="loadPage(this.page + 1)" *ngIf="this.page != this.storage.pages.length - 1">&raquo;</a>
