--- a/src/app/modules/list/list.component.html
+++ b/src/app/modules/list/list.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" *ngIf="!isSearch">
   <div [classList]="canDisplay(n)" style="margin-bottom: 0.5em" *ngFor="let n of storage.pages[page]; index as i">
     <div class="card image-holder" (click)="loadView(n)" style="width: 100%" [routerLink]="'/view/' + n.submissionId">
       <div class="card-img-top img-fluid" [style]="'background-image: url(\''+n.croppedFile+'\'); background-size: cover; background-position: top center; background-repeat: no-repeat; height: 150px;'"></div>
@@ -7,14 +7,23 @@
     </div>
   </div>
 </div>
-<div class="text-center">
+<div class="row" *ngIf="isSearch">
+  <div [classList]="canDisplay(n)" style="margin-bottom: 0.5em" *ngFor="let n of this.displayArray | filter:storage.searchText; index as i">
+    <div class="card image-holder" (click)="loadView(n)" style="width: 100%" [routerLink]="'/view/' + n.submissionId">
+      <div class="card-img-top img-fluid" [style]="'background-image: url(\''+n.croppedFile+'\'); background-size: cover; background-position: top center; background-repeat: no-repeat; height: 150px;'"></div>
+      <p class="text-center" style="margin-top: 5px;"><span class="badge rounded-pill bg-primary">{{n.artist}}</span>&nbsp;<span class="badge rounded-pill bg-secondary">{{n.category}}</span>&nbsp;<span class="badge rounded-pill bg-info">{{n.folder}}</span>&nbsp;<span *ngIf="n.r18" class="badge rounded-pill bg-danger">R18</span>&nbsp;<span *ngIf="n.hide" class="badge rounded-pill bg-dark">Hidden</span></p>
+
+    </div>
+  </div>
+</div>
+<div class="text-center" *ngIf="!isSearch">
   <ul class="pagination">
     <li class="page-item">
       <a class="page-link" href="javascript:///" (click)="loadPage(this.page - 1)" *ngIf="this.page != 0">&laquo;</a>
     </li>
     <li class="page-item" *ngFor="let n of storage.pages; index as i" [class.active]="i === this.page">
-      <a class="page-link" *ngIf="(storage.pages.length > 5 && (i <= storage.pages.length / 6) || (i >= (storage.pages.length / 6) * 5)) || (storage.pages.length <= 10) || this.page == i" (click)="loadPage(i)" href="javascript:///">{{i === 0 ? 'H' : i}}</a>
-      <a class="page-link ellipses" *ngIf="storage.pages.length > 5 && (i === 6 && this.page !== 6)" href="javascript:///">...</a>
+      <a class="page-link" *ngIf="(storage.pages.length > 5 && (i <= storage.pages.length / 6) || (i >= (storage.pages.length / 6) * 5)) || (abs(this.page - i) <= 2) || (storage.pages.length <= 10) || this.page == i" (click)="loadPage(i)" href="javascript:///">{{i === 0 ? 'H' : i}}</a>
+      <!-- <a class="page-link ellipses" *ngIf="storage.pages.length > 5 && (i === 6 && this.page !== 6) && this.page > 5" href="javascript:///">...</a> -->
     </li>
     <li class="page-item">
       <a class="page-link" href="javascript:///" (click)="loadPage(this.page + 1)" *ngIf="this.page != this.storage.pages.length - 1">&raquo;</a>
