--- a/src/app/pages/search/search.component.html
+++ b/src/app/pages/search/search.component.html
@@ -2,7 +2,7 @@
 
   <div class="row">
     <div class="col-md-12" style="margin-bottom: 0.5em;">
-      <input class="form-control" style="display: block;" type="text" placeholder="Search" name="searcher" [(ngModel)]="storage.searchText">
+      <input class="form-control" style="display: block;" type="text" placeholder="Search" name="searcher" autofocus [(ngModel)]="storage.searchText">
     </div>
   </div>
 
